# dtctl

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: index.md  standards.md
src/dfadapter/config_set_file_handler/: __init__.py  adapter.py  config.py
src/dfadapter/config_set_repository/: __init__.py  adapter.py  config.py
src/dfadapter/host_configuration/: __init__.py  adapter.py  config.py
src/dfctl/: decorators.py  entry.py  variant.py
src/dflib/: error.py  model.py
src/dflib/adapter/: config.py
src/dflib/service/: __init__.py  config_set_service.py
src/dflib/typing/: __init__.py  config_set_file_handler.py  host_configuration.py  repository.py
tests/: __init__.py  fixtures.py  test_environment.py
tests/dfadapters/: test_adapter_config_abc.py  test_local_config_set_file_handler.py  test_local_config_set_repository.py  test_local_host_configuration.py
tests/dflib/services/: test_config_set_service.py
tests/dflib/services/config_set_service/: fixtures.py  test_config_set_service_add_files.py  test_config_set_service_create.py  test_config_set_service_delete.py  test_config_set_service_get_file_bytes.py  test_config_set_service_list_config_sets.py  test_config_set_service_list_files.py  test_config_set_service_remove_files.py
tests/helpers/: __init__.py  constants.py
tests/mocks/: __init__.py  config_set_file_handler_mock.py  config_set_repo_mock.py  host_config_mock.py  repository_mock.py
