[project]
authors = [{name = "Ian Laird",email = "irlaird@gmail.com"}]
description = "A tool to manage dotfiles."
homepage = "https://github.com/en0/dfctl"
license = "MIT"
name = "dfctl"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "pyioc3==1.6.1"
]

[project.scripts]
dfctl = "dfctl.entry:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "dfctl" },
    { include = "dflib" },
]

[tool.poetry.group.dev.dependencies]
black = "^21.0"
flake8 = "^3.8"
pytest = "^6.0"
pytest-watch = "^4.2"
