[project]
authors = [{name = "Ian Laird",email = "irlaird@gmail.com"}]
description = "A tool to manage dotfiles."
homepage = "https://github.com/en0/dfctl"
license = { file = "LICENSE" }
name = "dfctl"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "pyioc3==1.6.1",
    "click (>=8.1.8,<9.0.0)"]

[project.scripts]
dfctl = "dfctl.entry:dfctl"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "dfctl", from = "src" },
    { include = "dflib", from = "src" },
    { include = "dfadapter", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-watch = "^4.2"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-x --ff"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownLambdaType = false

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 100

[tool.flake8]
# Give just a bit of wiggle room
max-line-length = 110
exclude = [
    "__pycache__",
    "tests/**"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
exclude = ['tests/']
